<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Andreas Redmer <ar-gdroid@abga.be>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  --><resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">G-Droid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">client for the F-Droid repository</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="action_add_favourite">Add to Favourites</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_categories">categories</string>
    <string name="title_tags">tags</string>
    <string name="title_starred">starred</string>
    <string name="title_myapps">my apps</string>
    <string name="title_search">search</string>

    <!--tags comming via json-->
    <string name="app_store">App Store</string>
    <string name="calendar">Calendar</string>
    <string name="camera">Camera</string>
    <string name="contacts">Contacts</string>
    <string name="email_client">Email Client</string>
    <string name="file_browser">File Browser</string>
    <string name="gallery">Gallery</string>
    <string name="launcher">Launcher</string>
    <string name="music_player">Music Player</string>
    <string name="shopping_list">Shopping List</string>
    <string name="text_editor">Text Editor</string>
    <string name="todo_list">Todo List</string>
    <string name="torrent_downloader">Torrent Downloader</string>
    <string name="web_browser">Web Browser</string>
    <string name="youtube_player">YouTube Player</string>

    <!--categories-->
    <string name="category_Connectivity" tools:ignore="UnusedResources">Connectivity</string>
    <string name="category_Development" tools:ignore="UnusedResources">Development</string>
    <string name="category_Games" tools:ignore="UnusedResources">Games</string>
    <string name="category_Graphics" tools:ignore="UnusedResources">Graphics</string>
    <string name="category_Internet" tools:ignore="UnusedResources">Internet</string>
    <string name="category_Money" tools:ignore="UnusedResources">Money</string>
    <string name="category_Multimedia" tools:ignore="UnusedResources">Multimedia</string>
    <string name="category_Navigation" tools:ignore="UnusedResources">Navigation</string>
    <string name="category_Phone_SMS" tools:ignore="UnusedResources">Phone &amp; SMS</string>
    <string name="category_Reading" tools:ignore="UnusedResources">Reading</string>
    <string name="category_Science_Education" tools:ignore="UnusedResources">Science &amp; Education</string>
    <string name="category_Security" tools:ignore="UnusedResources">Security</string>
    <string name="category_Sports_Health" tools:ignore="UnusedResources">Sports &amp; Health</string>
    <string name="category_System" tools:ignore="UnusedResources">System</string>
    <string name="category_Theming" tools:ignore="UnusedResources">Theming</string>
    <string name="category_Time" tools:ignore="UnusedResources">Time</string>
    <string name="category_Writing" tools:ignore="UnusedResources">Writing</string>

    <!--anti features-->
    <string name="antifeatures">Anti-features</string>
    <string name="anti_ads">This app contains advertising</string>
    <string name="anti_tracking">This app tracks and reports your activity</string>
    <string name="anti_nonfreeadd">This app promotes non-free add-ons</string>
    <string name="anti_nonfreenet">This app promotes non-free network services</string>
    <string name="anti_nonfreedep">This app depends on other non-free apps</string>
    <string name="anti_upstreamnonfree">The upstream source code is not entirely Free</string>
    <string name="anti_nonfreeassets">This app contains non-free assets</string>
    <string name="anti_disabledalgorithm">This app has a weak security signature</string>
    <string name="anti_knownvuln">This app contains a known security vulnerability</string>
    <string name="anti_nosourcesince">The source code is no longer available, no updates possible.</string>


    <string name="no_permissions">No permissions are used.</string>

    <string name="perm_costs_money">This may cost you money</string>
    <string name="perms_description_app">Provided by .</string>
    <string name="perms_new_perm_prefix">New:</string>
    <string name="permissions">Permissions</string>
    <string name="links">Links</string>
    <string name="action_install">Install</string>
    <string name="action_upgrade">Upgrade</string>
    <string name="action_launch">Run</string>
    <string name="action_hide">Hide</string>
    <string name="action_unhide">Unhide</string>

    <string name="pref_header_ratings">Star Ratings</string>
    <string name="pref_title_upstream_ratings">Ratings from GitHub, GitLab and SourceForge</string>
    <string name="pref_title_ratings_headline">Set your importance for each metric</string>
    <string name="pref_title_ratings_summary">Assign a number from 0 to 10 to each metric. Higher number means higher importance.</string>
    <string name="pref_title_updated_in_2_years">last update in recent 2 years</string>
    <string name="pref_title_release_cycle_time">Release cycle time</string>

    <string name="search_harder">search harder</string>
    <string name="search_even_harder">search even harder</string>
    <string name="menu_my_apps">My apps</string>
    <string name="menu_hidden_apps">Hidden apps</string>
    <string name="similar_apps">Similar apps</string>
    <string name="by_same_author">By same Author</string>
    <string name="menu_app_authors">App Authors</string>
    <string name="menu_top_authors">Top Authors</string>
    <string name="top_author">Top Author</string>

    <string name="installing" formatted="false">Installing %s</string>
    <string name="installing_details" formatted="false">Installing %d / %d </string>
    <string name="installation_finished">Installation Finished</string>
    <string name="installed_details">Installed %d apps</string>
    <string name="confirmation">Confirmation</string>
    <string name="use_root">Do you want to install apps without user interaction, using root privileges available on this device\?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download_all_updates">Download all updates</string>

    <string name="downloading">Downloading…</string>
    <string name="download_pending">Waiting to start download…</string>
    <string name="pref_description_use_root">install and uninstall apps automatically if the device is rooted</string>
    <string name="pref_title_use_root">Use Root Privilege</string>
    <string name="in_same_category">Same category</string>
    <string name="pref_title_use_list_view">Enable list view</string>
    <string name="pref_description_use_list_view">show apps in a list if possible</string>

    <string name="more">More</string>
    <string name="newest_apps">Newest apps</string>
    <string name="recently_updated">Recently updated</string>
    <string name="recently_commented">Recently commented</string>
    <string name="highly_rated">Highly rated</string>
    <string name="similar_to_my_apps">Similar to my apps</string>
    <string name="you_might_also_like">You might also like</string>
    <string name="random_apps">Random apps</string>

    <string name="last_update">Last update</string>
    <string name="added_on">Added on </string>
    <string name="stars">Stars</string>
    <string name="name">Name</string>
    <string name="sort_search">Sort search</string>
    <string name="ascending">ascending</string>
    <string name="descending">descending</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="license">License</string>
    <string name="app_size">Size</string>
    <string name="developer">Developer</string>
    <string name="comments">Comments</string>
    <string name="write_comment">write comment</string>
    <string name="no_comments_available">no comments available for this app</string>
    <string name="fetching_comments">fetching comments …</string>
    <string name="ok">OK</string>
    <string name="how_to_rate">Please share this with a Mastodon app, add your comment but don\'t change the hashtag.</string>
    <string name="download_error">Download failed!</string>
    <string name="saving_app_details">Saving app details</string>
    <string name="could_not_download_gdroid_metadata">could not download G-Droid metadata</string>
    <string name="cancel">Cancel</string>
    <string name="crash_dialog_title">G-Droid has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred
        forcing the app to stop. Would you like to e-mail the
        details to help fix the issue?
    </string>
    <string name="crash_dialog_comment_prompt">You can add extra information and comments here:</string>
    <string name="pref_title_send_crash_reports">Prompt to send crash reports</string>
    <string name="pref_description_send_crash_reports">Gather data about crashes and ask to send them to the developer</string>
    <string name="data_is_up_to_date">data is up-to-date</string>
    <string name="app_can_be_updated">This application can be updated from %s to %s</string>

    <string name="versions">Versions</string>
    <string name="app_installed">Installed</string>
</resources>
