<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_label_outline_black_24dp"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_starred"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/title_starred" />

    <item
        android:id="@+id/navigation_myapps"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/title_myapps" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

</menu>
