<!--
  ~ Copyright (C) 2018,2019 Andreas Redmer <ar-gdroid@abga.be>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:enabled="true"
        android:key="use_root"
        android:title="@string/pref_title_use_root"
        android:summary="@string/pref_description_use_root"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:enabled="true"
        android:key="use_list_view"
        android:title="@string/pref_title_use_list_view"
        android:summary="@string/pref_description_use_list_view"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:enabled="true"
        android:key="send_crash_reports"
        android:title="@string/pref_title_send_crash_reports"
        android:summary="@string/pref_description_send_crash_reports"
        />

</PreferenceScreen>
