<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Andreas Redmer <ar-gdroid@abga.be>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="6dip">
    <!--android:layout_height="?android:attr/listPreferredItemHeight"-->

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginRight="6dip"
        android:paddingLeft="12dp"
        app:srcCompat="@drawable/ic_update_black_24dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_firstLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="3dp"
                android:text="X.X.X"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <Button
                android:id="@+id/btn_install"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/action_install"
                android:textColor="#ffffffff"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/lbl_whats_new"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="20"
            android:text="@string/perms_new_perm_prefix"
            android:textSize="12sp"
            android:padding="3dp"
            />

        <TextView
            android:id="@+id/lbl_secondLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/added_on"
            android:textSize="12sp"
            android:padding="3dp"
            />

        <TextView
            android:id="@+id/lbl_thirdline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/app_size"
            android:textSize="12sp"
            android:padding="3dp"
            />


    </LinearLayout>


</LinearLayout>

